# CPS-Automotive

./: .codecov.yml  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  code-of-conduct.md
src/: PrimeChecker.cpp  PrimeChecker.hpp  TestPrimeChecker.cpp  catch.hpp  helloworld.cpp
